--- a/public/trumpStyles.css
+++ b/public/trumpStyles.css
@@ -95,7 +95,7 @@ body.minimal-skin {
 body.default-theme{
     --topline-padding: 0;
     --back-image-path: url(/images/80sCars/back.jpg);
-    --card-front-image: url(/images/cardbg.jpg);
+    --card-front-image: url(/images/80sCars/front.jpg);
     --topline-background: transparent;
     --image-border: 1px solid #202020; 
     --name-bg-colour: transparent;
@@ -114,7 +114,7 @@ body.default-theme{
 body.classic-theme{
     --topline-padding: 0.015;
     --back-image-path: url(/images/Aeroplanes/back.jpg);
-    --card-front-image: url(/images/cardbg.jpg);
+    --card-front-image: url(/images/Ships/front.jpg);
     --topline-background: #ffdf00;
     --image-border: 4px solid #ffffff; 
     --name-bg-colour: #ffdf00;
